Fixed JNI finding from a jar.  Fixed an inequality in MicroTile, ReadCounter, Tools for using the inverse quality prob array.  Added assembly accession support to ShrinkAccession.  Added comparison to LogLog16.