@@ -3,7 +3,7 @@
 usage(){
 echo "
 Written by Brian Bushnell
-Last modified January 31, 2026
+Last modified February 24, 2026
 
 Description:  RQCFilter3 is a revised version of RQCFilter2 using BBDukStreamer and the Streamer interface.
 The dependencies are available at http://portal.nersc.gov/dna/microbial/assembly/bushnell/RQCFilterData.tar
@@ -242,7 +242,7 @@ launch() {
 		#Ignore NERSC_HOST
 		shifter=1
 	fi
-	CMD="java $EA $EOOM $SIMD $XMX $XMS -cp $CP jgi.RQCFilter3 $@"
+	CMD="java --enable-native-access=ALL-UNNAMED $EA $EOOM $SIMD $XMX $XMS -cp $CP jgi.RQCFilter3 $@"
 	echo "$CMD" >&2
 	eval $CMD
 }
